# NDKStudy

./: README.md  settings.gradle  x264_build.sh
app/: CMakeLists.txt  build.gradle
app/key/: leo.jks
app/release/: output.json
app/src/androidTest/java/com/xin/ndkstudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ffmpeglib/: player.cpp
app/src/main/cpp/file/: file.cpp  file.h
app/src/main/cpp/filelib/: file.cpp
app/src/main/cpp/live/: live.cpp  queue.cpp  queue.h
app/src/main/cpp/nativelib/: Daughter.cpp  Daughter.h  Father.cpp  Father.h  Son.cpp  Son.h  native-lib.cpp
app/src/main/java/com/xin/ndkstudy/: FileUtils.java  MainActivity.kt  MyApp.kt  TestUtils.java  VideoUtils.java
app/src/main/java/com/xin/ndkstudy/activity/: FileActivity.kt  LiveActivity.kt  MainActivity.kt  PlayerActivity.kt
app/src/main/java/com/xin/ndkstudy/ext/: UtilExt.kt
app/src/main/java/com/xin/ndkstudy/live/camera2/: Camera2Helper.java  Camera2Listener.java
app/src/main/java/com/xin/ndkstudy/live/parm/: AudioParam.kt  VideoParam.kt
app/src/main/java/com/xin/ndkstudy/live/pusher/: AudioPusher.kt  LivePusher.kt  Pusher.kt  VideoPusher.kt
app/src/main/java/com/xin/ndkstudy/util/: FileUtils.java  LivePushUtils.java  TestUtils.java  ThreadUtils.java  VideoUtils.java
app/src/main/java/com/xin/ndkstudy/widget/: MyVideoView.kt
app/src/main/res/layout/: activity_file.xml  activity_live.xml  activity_main.xml  activity_video_player.xml
app/src/test/java/com/xin/ndkstudy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
